fix: validar el inventario del pedido completo (#76)